@@ -1,4 +1,0 @@
-The AudioScrobbler plugin sends information about the tracks you play in Beep
-to the audioscrobbler.com to build a profile of the type of music you listen
-to and find people that have similar tastes in music. For more information on
-AudioScrobbler see http://www.last.fm/
