@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2009/08/10 19:00:00 kefren Exp $
-lib/bmp/General/libbmp_scrobbler.la
