@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.5319 2023/09/04 09:34:15 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.5320 2023/09/04 09:36:38 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -7767,3 +7767,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated devel/errcheck to 1.6.3 [bsiegert 2023-09-04]
 	Removed audio/p5-MusicBrainz-Client [wiz 2023-09-04]
 	Removed audio/p5-MusicBrainz-Queries [wiz 2023-09-04]
+	Removed audio/bmp-scrobbler [wiz 2023-09-04]
